# libstdaudio

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/: level_meter.cpp  melody.cpp  print_devices.cpp  sine_wave.cpp  white_noise.cpp
include/: __audio_base.h  __audio_buffer  __audio_buffer.h  __audio_buffer_list  __audio_buffer_view  __audio_config  __audio_device  __audio_device.h  __audio_device_list  __audio_exception.h  __audio_strided_span  __dynamic_library.h  audio  audio.h  buffer.h  buffer_list.h  config.h  device.h  device_list.h
include/audio_backend/: __asio_audio_device.h  __asio_backend.h  __asio_sample.h  __coreaudio_backend.h  __null_backend.h  __portaudio_backend.h  __pulseaudio_backend.h  __wasapi_backend.h  __windows_backend.h  iasiodrv.h
include/cpp/: span.hpp
src/: _backend_coreaudio.cpp  _backend_null.cpp  _device_impl.h  _strided_dynamic_extent_span.h  backend_coreaudio.cpp  buffer.cpp  buffer_list.cpp  device.cpp  device_impl.h  device_list.cpp  strided_dynamic_extent_span.h
src/backend/: coreaudio_backend.cpp  null_backend.cpp
src/coreaudio_backend/: device_list.cpp
src/null_backend/: device_list.cpp
test/: asio_test.cpp  audio_buffer_test.cpp  audio_device_test.cpp  buffer_list_test.cpp  buffer_test.cpp  buffer_view_test.cpp  device_test.cpp  null_backend_test.cpp  strided_span_test.cpp  test_main.cpp  trompeloeil.hpp
